// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getCapabilities OS Filtering os + os version exclude filters 1`] = `
Array [
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "42.0",
    "browser_version": "42.0",
    "device": null,
    "os": "Windows",
    "os_version": "XP",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "42.0",
    "browser_version": "42.0",
    "device": null,
    "os": "Windows",
    "os_version": "7",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "42.0",
    "browser_version": "42.0",
    "device": null,
    "os": "Windows",
    "os_version": "10",
    "real_mobile": null,
  },
]
`;

exports[`getCapabilities OS Filtering os + os version include + exclude filters 1`] = `
Array [
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "42.0",
    "browser_version": "42.0",
    "device": null,
    "os": "OS X",
    "os_version": "Snow Leopard",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "42.0",
    "browser_version": "42.0",
    "device": null,
    "os": "OS X",
    "os_version": "Mountain Lion",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "42.0",
    "browser_version": "42.0",
    "device": null,
    "os": "OS X",
    "os_version": "Mavericks",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "42.0",
    "browser_version": "42.0",
    "device": null,
    "os": "OS X",
    "os_version": "Yosemite",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "42.0",
    "browser_version": "42.0",
    "device": null,
    "os": "OS X",
    "os_version": "El Capitan",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "42.0",
    "browser_version": "42.0",
    "device": null,
    "os": "OS X",
    "os_version": "Sierra",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "42.0",
    "browser_version": "42.0",
    "device": null,
    "os": "OS X",
    "os_version": "Mojave",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "42.0",
    "browser_version": "42.0",
    "device": null,
    "os": "OS X",
    "os_version": "Catalina",
    "real_mobile": null,
  },
]
`;

exports[`getCapabilities OS Filtering os + os version include filters 1`] = `
Array [
  Object {
    "browser": "ie",
    "browserName": "ie",
    "browserVersion": "10.0",
    "browser_version": "10.0",
    "device": null,
    "os": "Windows",
    "os_version": "7",
    "real_mobile": null,
  },
]
`;

exports[`getCapabilities browser filtering browser exclude filter 1`] = `
Array [
  Object {
    "browser": "ie",
    "browserName": "ie",
    "browserVersion": "10.0",
    "browser_version": "10.0",
    "device": null,
    "os": "Windows",
    "os_version": "7",
    "real_mobile": null,
  },
  Object {
    "browser": "ie",
    "browserName": "ie",
    "browserVersion": "10.0",
    "browser_version": "10.0",
    "device": null,
    "os": "Windows",
    "os_version": "8",
    "real_mobile": null,
  },
  Object {
    "browser": "edge",
    "browserName": "edge",
    "browserVersion": "18.0",
    "browser_version": "18.0",
    "device": null,
    "os": "Windows",
    "os_version": "10",
    "real_mobile": null,
  },
]
`;

exports[`getCapabilities browser filtering browser include + exclude filter 1`] = `
Array [
  Object {
    "browser": "edge",
    "browserName": "edge",
    "browserVersion": "18.0",
    "browser_version": "18.0",
    "device": null,
    "os": "Windows",
    "os_version": "10",
    "real_mobile": null,
  },
]
`;

exports[`getCapabilities browser filtering browser include filter 1`] = `
Array [
  Object {
    "browser": "ie",
    "browserName": "ie",
    "browserVersion": "10.0",
    "browser_version": "10.0",
    "device": null,
    "os": "Windows",
    "os_version": "7",
    "real_mobile": null,
  },
  Object {
    "browser": "ie",
    "browserName": "ie",
    "browserVersion": "10.0",
    "browser_version": "10.0",
    "device": null,
    "os": "Windows",
    "os_version": "8",
    "real_mobile": null,
  },
  Object {
    "browser": "edge",
    "browserName": "edge",
    "browserVersion": "18.0",
    "browser_version": "18.0",
    "device": null,
    "os": "Windows",
    "os_version": "10",
    "real_mobile": null,
  },
]
`;

exports[`getCapabilities browserslist options last 2 versions 1`] = `
Array [
  Object {
    "browser": "chrome",
    "browserName": "chrome",
    "browserVersion": "72.0",
    "browser_version": "72.0",
    "device": null,
    "os": "Windows",
    "os_version": "7",
    "real_mobile": null,
  },
  Object {
    "browser": "chrome",
    "browserName": "chrome",
    "browserVersion": "73.0",
    "browser_version": "73.0",
    "device": null,
    "os": "Windows",
    "os_version": "7",
    "real_mobile": null,
  },
  Object {
    "browser": "ie",
    "browserName": "ie",
    "browserVersion": "10.0",
    "browser_version": "10.0",
    "device": null,
    "os": "Windows",
    "os_version": "7",
    "real_mobile": null,
  },
  Object {
    "browser": "ie",
    "browserName": "ie",
    "browserVersion": "11.0",
    "browser_version": "11.0",
    "device": null,
    "os": "Windows",
    "os_version": "7",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "65.0",
    "browser_version": "65.0",
    "device": null,
    "os": "Windows",
    "os_version": "7",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "66.0",
    "browser_version": "66.0",
    "device": null,
    "os": "Windows",
    "os_version": "7",
    "real_mobile": null,
  },
  Object {
    "browser": "chrome",
    "browserName": "chrome",
    "browserVersion": "72.0",
    "browser_version": "72.0",
    "device": null,
    "os": "Windows",
    "os_version": "8",
    "real_mobile": null,
  },
  Object {
    "browser": "chrome",
    "browserName": "chrome",
    "browserVersion": "73.0",
    "browser_version": "73.0",
    "device": null,
    "os": "Windows",
    "os_version": "8",
    "real_mobile": null,
  },
  Object {
    "browser": "ie",
    "browserName": "ie",
    "browserVersion": "10.0",
    "browser_version": "10.0",
    "device": null,
    "os": "Windows",
    "os_version": "8",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "65.0",
    "browser_version": "65.0",
    "device": null,
    "os": "Windows",
    "os_version": "8",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "66.0",
    "browser_version": "66.0",
    "device": null,
    "os": "Windows",
    "os_version": "8",
    "real_mobile": null,
  },
  Object {
    "browser": "chrome",
    "browserName": "chrome",
    "browserVersion": "72.0",
    "browser_version": "72.0",
    "device": null,
    "os": "Windows",
    "os_version": "8.1",
    "real_mobile": null,
  },
  Object {
    "browser": "chrome",
    "browserName": "chrome",
    "browserVersion": "73.0",
    "browser_version": "73.0",
    "device": null,
    "os": "Windows",
    "os_version": "8.1",
    "real_mobile": null,
  },
  Object {
    "browser": "ie",
    "browserName": "ie",
    "browserVersion": "11.0",
    "browser_version": "11.0",
    "device": null,
    "os": "Windows",
    "os_version": "8.1",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "65.0",
    "browser_version": "65.0",
    "device": null,
    "os": "Windows",
    "os_version": "8.1",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "66.0",
    "browser_version": "66.0",
    "device": null,
    "os": "Windows",
    "os_version": "8.1",
    "real_mobile": null,
  },
  Object {
    "browser": "chrome",
    "browserName": "chrome",
    "browserVersion": "72.0",
    "browser_version": "72.0",
    "device": null,
    "os": "Windows",
    "os_version": "10",
    "real_mobile": null,
  },
  Object {
    "browser": "chrome",
    "browserName": "chrome",
    "browserVersion": "73.0",
    "browser_version": "73.0",
    "device": null,
    "os": "Windows",
    "os_version": "10",
    "real_mobile": null,
  },
  Object {
    "browser": "ie",
    "browserName": "ie",
    "browserVersion": "11.0",
    "browser_version": "11.0",
    "device": null,
    "os": "Windows",
    "os_version": "10",
    "real_mobile": null,
  },
  Object {
    "browser": "edge",
    "browserName": "edge",
    "browserVersion": "17.0",
    "browser_version": "17.0",
    "device": null,
    "os": "Windows",
    "os_version": "10",
    "real_mobile": null,
  },
  Object {
    "browser": "edge",
    "browserName": "edge",
    "browserVersion": "18.0",
    "browser_version": "18.0",
    "device": null,
    "os": "Windows",
    "os_version": "10",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "65.0",
    "browser_version": "65.0",
    "device": null,
    "os": "Windows",
    "os_version": "10",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "66.0",
    "browser_version": "66.0",
    "device": null,
    "os": "Windows",
    "os_version": "10",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "65.0",
    "browser_version": "65.0",
    "device": null,
    "os": "OS X",
    "os_version": "Mavericks",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "66.0",
    "browser_version": "66.0",
    "device": null,
    "os": "OS X",
    "os_version": "Mavericks",
    "real_mobile": null,
  },
  Object {
    "browser": "chrome",
    "browserName": "chrome",
    "browserVersion": "72.0",
    "browser_version": "72.0",
    "device": null,
    "os": "OS X",
    "os_version": "Yosemite",
    "real_mobile": null,
  },
  Object {
    "browser": "chrome",
    "browserName": "chrome",
    "browserVersion": "73.0",
    "browser_version": "73.0",
    "device": null,
    "os": "OS X",
    "os_version": "Yosemite",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "65.0",
    "browser_version": "65.0",
    "device": null,
    "os": "OS X",
    "os_version": "Yosemite",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "66.0",
    "browser_version": "66.0",
    "device": null,
    "os": "OS X",
    "os_version": "Yosemite",
    "real_mobile": null,
  },
  Object {
    "browser": "chrome",
    "browserName": "chrome",
    "browserVersion": "72.0",
    "browser_version": "72.0",
    "device": null,
    "os": "OS X",
    "os_version": "El Capitan",
    "real_mobile": null,
  },
  Object {
    "browser": "chrome",
    "browserName": "chrome",
    "browserVersion": "73.0",
    "browser_version": "73.0",
    "device": null,
    "os": "OS X",
    "os_version": "El Capitan",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "65.0",
    "browser_version": "65.0",
    "device": null,
    "os": "OS X",
    "os_version": "El Capitan",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "66.0",
    "browser_version": "66.0",
    "device": null,
    "os": "OS X",
    "os_version": "El Capitan",
    "real_mobile": null,
  },
  Object {
    "browser": "chrome",
    "browserName": "chrome",
    "browserVersion": "72.0",
    "browser_version": "72.0",
    "device": null,
    "os": "OS X",
    "os_version": "Sierra",
    "real_mobile": null,
  },
  Object {
    "browser": "chrome",
    "browserName": "chrome",
    "browserVersion": "73.0",
    "browser_version": "73.0",
    "device": null,
    "os": "OS X",
    "os_version": "Sierra",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "65.0",
    "browser_version": "65.0",
    "device": null,
    "os": "OS X",
    "os_version": "Sierra",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "66.0",
    "browser_version": "66.0",
    "device": null,
    "os": "OS X",
    "os_version": "Sierra",
    "real_mobile": null,
  },
  Object {
    "browser": "chrome",
    "browserName": "chrome",
    "browserVersion": "72.0",
    "browser_version": "72.0",
    "device": null,
    "os": "OS X",
    "os_version": "High Sierra",
    "real_mobile": null,
  },
  Object {
    "browser": "chrome",
    "browserName": "chrome",
    "browserVersion": "73.0",
    "browser_version": "73.0",
    "device": null,
    "os": "OS X",
    "os_version": "High Sierra",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "65.0",
    "browser_version": "65.0",
    "device": null,
    "os": "OS X",
    "os_version": "High Sierra",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "66.0",
    "browser_version": "66.0",
    "device": null,
    "os": "OS X",
    "os_version": "High Sierra",
    "real_mobile": null,
  },
  Object {
    "browser": "chrome",
    "browserName": "chrome",
    "browserVersion": "72.0",
    "browser_version": "72.0",
    "device": null,
    "os": "OS X",
    "os_version": "Mojave",
    "real_mobile": null,
  },
  Object {
    "browser": "chrome",
    "browserName": "chrome",
    "browserVersion": "73.0",
    "browser_version": "73.0",
    "device": null,
    "os": "OS X",
    "os_version": "Mojave",
    "real_mobile": null,
  },
  Object {
    "browser": "safari",
    "browserName": "safari",
    "browserVersion": "12.1",
    "browser_version": "12.1",
    "device": null,
    "os": "OS X",
    "os_version": "Mojave",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "65.0",
    "browser_version": "65.0",
    "device": null,
    "os": "OS X",
    "os_version": "Mojave",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "66.0",
    "browser_version": "66.0",
    "device": null,
    "os": "OS X",
    "os_version": "Mojave",
    "real_mobile": null,
  },
  Object {
    "browser": "chrome",
    "browserName": "chrome",
    "browserVersion": "72.0",
    "browser_version": "72.0",
    "device": null,
    "os": "OS X",
    "os_version": "Catalina",
    "real_mobile": null,
  },
  Object {
    "browser": "chrome",
    "browserName": "chrome",
    "browserVersion": "73.0",
    "browser_version": "73.0",
    "device": null,
    "os": "OS X",
    "os_version": "Catalina",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "65.0",
    "browser_version": "65.0",
    "device": null,
    "os": "OS X",
    "os_version": "Catalina",
    "real_mobile": null,
  },
  Object {
    "browser": "firefox",
    "browserName": "firefox",
    "browserVersion": "66.0",
    "browser_version": "66.0",
    "device": null,
    "os": "OS X",
    "os_version": "Catalina",
    "real_mobile": null,
  },
]
`;

exports[`getCapabilities browserslist options multiple browser query 1`] = `
Array [
  Object {
    "browser": "ie",
    "browserName": "ie",
    "browserVersion": "10.0",
    "browser_version": "10.0",
    "device": null,
    "os": "Windows",
    "os_version": "7",
    "real_mobile": null,
  },
  Object {
    "browser": "ie",
    "browserName": "ie",
    "browserVersion": "10.0",
    "browser_version": "10.0",
    "device": null,
    "os": "Windows",
    "os_version": "8",
    "real_mobile": null,
  },
  Object {
    "browser": "edge",
    "browserName": "edge",
    "browserVersion": "18.0",
    "browser_version": "18.0",
    "device": null,
    "os": "Windows",
    "os_version": "10",
    "real_mobile": null,
  },
]
`;

exports[`getCapabilities browserslist options single browser query 1`] = `
Array [
  Object {
    "browser": "ie",
    "browserName": "ie",
    "browserVersion": "10.0",
    "browser_version": "10.0",
    "device": null,
    "os": "Windows",
    "os_version": "7",
    "real_mobile": null,
  },
  Object {
    "browser": "ie",
    "browserName": "ie",
    "browserVersion": "10.0",
    "browser_version": "10.0",
    "device": null,
    "os": "Windows",
    "os_version": "8",
    "real_mobile": null,
  },
]
`;
